# hextexsim

./: AUTHORS  LICENCE  Makefile  Makefile.in  README  README~  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
example-files/: DESCRIPTION  fcc_hardening  fcc_metals  odf_Cu_rolled_0,6.tif  random_texture_very_long_rad.csv  settings
src/: Makefile  Makefile.am  Makefile.in  functions.cpp  hardening.cpp  hextexsim  hextexsim.cpp  structures.cpp  util.cpp
src/.deps/: functions.Po  hardening.Po  hardening_model.Po  hextexsim.Po  structures.Po  util.Po
src/includes/: functions.h  hardening.h  hardening_model.h  structures.h  util.h
